<resources>
    <string name="app_name">Blatherer</string>

    <!-- Keys -->
    <string name="credential_key">creds</string>

    <!-- fragment_login.xml -->
    <string name="login_tv_greet_msg">greet_msg</string>
    <string name="login_switch_remember">Remember Me?</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_butt_sign_in">Sign In</string>
    <string name="login_input_email">em</string>
    <string name="login_input_password">pw</string>
    <string name="login_tv_new_member">New to Blatherer?</string>
    <string name="login_butt_register">Register</string>
    <string name="login_tv_morning">Good Morning</string>
    <string name="login_tv_afternoon">Good Afternoon</string>
    <string name="login_switch_remember_val">switch_value</string>
    <string name="login_forgot_password">Forgot Password</string>

    <!-- fragment_register.xml -->
    <string name="register_hint_fname">First Name</string>
    <string name="register_hint_lname">Last Name</string>
    <string name="register_hint_username">Username</string>
    <string name="register_hint_email">Email</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_retype_password">Retype Password</string>
    <string name="register_input_fname">fname</string>
    <string name="register_input_lname">lname</string>
    <string name="register_input_username">uname</string>
    <string name="register_input_email">em</string>
    <string name="register_input_password">pw</string>
    <string name="register_butt_register">Register</string>

    <!-- activity_home.xml -->
    <string name="title_activity_home">Blatherer All Day Every Day</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="nav_message_activity_home">Messages</string>
    <string name="nav_weather_activity_home">Weather</string>
    <string name="nav_weather_starred_locations">Starred weather locations</string>

    <!-- fragment_weather.xml -->
    <string name="text_weather_fragment_temp">40</string>
    <string name="text_weather_fragment_location">Tacoma, WA</string>
    <string name="text_weather_fragment_humidity">HUMIDITY</string>
    <string name="text_weather_fragment_humidityValue">0.20</string>
    <string name="text_weather_fragment_precipLable">RAIN/SNOW</string>
    <string name="text_weather_fragment_precipValue">90%</string>
    <string name="text_home_fragment_H">H</string>
    <string name="text_home_fragment_high">H</string>
    <string name="text_home_weather_fragment_daily_high">35</string>
    <string name="text_weather_fragment_daily_low">20</string>
    <string name="nav_home_fragment">Home</string>
    <string name="nav_settings_fragment_home_settings">Settings</string>
    <string name="text_settings_fragment_settings">Settings</string>
    <string name="nav_logout">Log Out</string>
    <string name="nav_header_a_title">Blatherer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_emailVerificationFragment">UserName</string>
    <string name="text_emailVerificationFragment_welcome">Welcome to Blatherer!</string>
    <string name="text_emailVerificationFragment_hello">Hello,</string>
    <string name="text_emailVerificationFragment_statement">Thank for joining Blatherer chat app! Verify your account with the link sent to you email so you can login and start chatting!</string>
    <string name="button_emailVerificationFragment_continue">Continue to login screen</string>

    <!-- fragment_messages.xml -->
    <string name="msg_tv_contact_initials">FL</string>
    <string name="msg_tv_contact_name">First Last</string>
    <string name="msg_tv_latest">Latest Message mndkxiodkqn jdknc,zmxnckd weridjlcmx.</string>

    <!-- fragment_messages_list.xml -->
    <string name="msg_chat">Chat</string>

    <!-- fragment_contact.xml -->
    <string name="contact_tv_contact_initials">FL</string>
    <string name="contact_tv_contact_name">First Last</string>
    <string name="contact_tv_email">fakeemail@mail.com</string>
    <string name="contact_tv_username">username</string>

    <!-- fragment_contact_list.xml -->
    <string name="contact_people">People</string>

    <!-- fragment_new_contact.xml -->
    <string name="new_contact_tv_contact_initials">FL</string>
    <string name="new_contact_tv_contact_name">First Last</string>
    <string name="new_contact_tv_email">Email</string>
    <string name="new_contact_butt_hint">Send Request</string>

    <!-- fragment_new_contact_list.xml -->
    <string name="new_contact_add_contact">Add Contact</string>
    <string name="new_contact_et_search_hint">Username, Email, First or Last Name</string>

    <!-- fragment_new_contact_black.xml -->
    <string name="new_contact_status">Search / No Results</string>

    <!-- fragment_request.xml -->
    <string name="request_tv_contact_name">First Last</string>
    <string name="request_tv_contact_initials">FL</string>
    <string name="request_tv_email">fakeemail@mail.com</string>
    <string name="request_type">Request Type</string>
    <string name="request_connect">Request to Connect</string>
    <string name="request_chat">Request to Start a Conversation</string>
    <string name="request_butt_hint">Accept</string>

    <!-- fragment_request_list.xml -->
    <string name="request_tv_requests">Requests</string>

    <!-- msg_bottom_nav.xml -->
    <string name="nav_favorite">Favorites</string>
    <string name="nav_recents">Recents</string>
    <string name="nav_contacts">Contacts</string>
    <string name="nav_requests">Requests</string>
    <string name="button_request_sent_fragment_cancel">Cancel</string>
    <string name="text_sent_request_textSent">Sent</string>
    <string name="text_received_request_recycler">New Friend Requests</string>
    <string name="button_request_received_cancel">Cancel</string>
    <string name="button_received_request_item_deny">Deny</string>
    <string name="text_home_fragment_weather_today">Weather Today</string>
    <string name="text_view_home_fragment_recyclers_new_messages">New Messages</string>

    <string name="setting_reset_password">Change Password</string>

    <string name="change_pw_title">Change Password</string>
    <string name="change_pw_hint_old_pw">Old Password</string>
    <string name="change_pw_hint_new_pw">New Password</string>
    <string name="change_pw_hint_repeat_new_pw">Repeat New Password</string>
    <string name="change_pw_butt_confirm">Confirm</string>

    <string name="reset_pw_butt_reset">Reset</string>

    <string name="empty"></string>
</resources>
