<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_home"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home_fragment" />
        <item
            android:id="@+id/nav_weather_activity_home"
            android:icon="@drawable/ic_wb_cloudy_black_24dp"
            android:title="@string/nav_weather_activity_home" />
    </group>

    <group
        android:id="@+id/nav_group_contacts"
        android:checkableBehavior="single"        >
        <item
            android:id="@+id/nav_message_activity_home"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/nav_message_activity_home" />
        <item
            android:id="@+id/nav_contacts_activity_home"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_contacts_black_24dp"
            android:title="@string/nav_contacts"/>
        <item
            android:id="@+id/nav_requests_activity_home"
            app:actionViewClass="android.widget.TextView"
            android:icon="@drawable/ic_requests"
            android:title="@string/nav_requests"/>
    </group>

    <group
        android:id="@+id/nav_group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings_fragment"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings_fragment_home_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/nav_logout" />
    </group>

    <!--<item android:title="Communicate">-->
    <!--<menu>-->
    <!--<item-->
    <!--android:id="@+id/nav_share"-->
    <!--android:icon="@drawable/ic_menu_share"-->
    <!--android:title="Share" />-->
    <!--<item-->
    <!--android:id="@+id/nav_send"-->
    <!--android:icon="@drawable/ic_menu_send"-->
    <!--android:title="Send" />-->
    <!--</menu>-->
    <!--</item>-->
</menu>