<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_emailVerification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/half_white"
    tools:context=".EmailVerificationFragment">

    <TextView
        android:id="@+id/text_emailVerifcationFragment_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="264dp"
        android:text="@string/text_emailVerificationFragment"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emailVerificationFragment_welcome" />

    <TextView
        android:id="@+id/text_emailVerificationFragment_welcome"
        android:layout_width="415dp"
        android:layout_height="50dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/text_emailVerificationFragment_welcome"
        android:textColor="@color/half_white"
        android:textColorLink="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_emailVerificatioFragment_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="1dp"
        android:text="@string/text_emailVerificationFragment_hello"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/text_emailVerifcationFragment_username"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emailVerificationFragment_welcome" />

    <TextView
        android:id="@+id/text_emailVerificationFragment_statement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/text_emailVerificationFragment_statement"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emailVerifcationFragment_username"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/button_emailVerificationFragment_continue"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/button_emailVerificationFragment_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_emailVerificationFragment_statement"
        app:layout_constraintVertical_bias="0.063" />
</android.support.constraint.ConstraintLayout>