<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".RequestFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/cardview_light_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/request_initials"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:background="@drawable/rounded_textview"
                android:gravity="center"
                android:maxLength="2"
                android:padding="1dp"
                android:text="@string/request_tv_contact_initials"
                android:textAppearance="?attr/textAppearanceListItem"
                android:textColor="@color/colorContactInitials"
                android:textSize="35sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/request_contact_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:padding="1dp"
                    android:text="@string/request_tv_contact_name"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/request_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin"
                    android:layout_marginRight="@dimen/text_margin"
                    android:padding="1dp"
                    android:text="@string/request_type"
                    android:textAppearance="?attr/textAppearanceListItem"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />
            </LinearLayout>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/request_butt_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="@dimen/text_margin"
                android:text="@string/request_butt_hint" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>